formulario para carros

--- a/html/index.html
+++ b/html/index.html
@@ -193,8 +193,9 @@
         <!-- Resetar form-->
         <input type="reset" value="Limpar">
 
-        <img src="ren.jpg">
+        <img src="https://www.hashtagtreinamentos.com/">
         <!--envio form-->
+
 
         <input type="submit" value="enviar" />
     </form>
